--- a/index.html
+++ b/index.html
@@ -130,6 +130,13 @@
         </a>
       </div>
 
+            <div class="card">
+        <h2>Beregn udfoldet pladelængde</h2>
+        <a href="bukprofil_tweaks_pan.html" class="btn">
+          Værktøj til at beregne udfoldet pladelængde 1-3mm tykkelse
+        </a>
+      </div>
+
     </div>
 
     <footer>
